# llmdev

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
02_python/: .task01.org.ipynb.pandoc  basic.ipynb  task01.ipynb  task01.org  task01.py  task02.ipynb  task02.org  task03.ipynb  task04.ipynb
03_collections/: task01.ipynb  task02.ipynb  task03.ipynb
04_function/: task01.ipynb  task02.ipynb
05_oop/: task01.ipynb
06_test/: authenticator.py  test_authenticator.py
08_htmlcss/: task01.html  task02.css  task02.html
09_flask/todo/: app.py
09_flask/todo/static/: style.css
09_flask/todo/templates/: base.html  index.html
10_llmbasic/: task01.ipynb
11_tool/: search.ipynb
14_rag/: task01.ipynb
14_rag/data/text/: 03休暇規則.md  04健康・安全管理規則.md  07人事評価・昇進規則.md  08福利厚生規則.md  09退職・解雇に関する規則.md  10その他の特定事項.md
15_langchain/: task01.ipynb
16_llmapp/original/: app.py  graph.py  test_app.py  test_graph.py
16_llmapp/original/data/text/: 01就業規則.md
16_llmapp/original/static/: main.js  style.css
16_llmapp/original/templates/: base.html  index.html
data/text/: 02賃金規則.md  05行動規範・倫理規程.md  06懲戒規則.md
