[project]
name = "llmdev"
version = "1.0.0"
description = "LLM application development course"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ipykernel<7",
    "jupyter<=1.1.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ruff-lsp>=0.0.62",
]
