[project]
name = "llmdev"
version = "1.0.0"
description = "LLM application development course"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "llama-index>=0.10.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.21",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ipykernel<7",
    "jupyter<=1.1.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ruff-lsp>=0.0.62",
]
