[project]
name = "llmdev"
version = "1.0.0"
description = "LLM application development course"
requires-python = ">=3.12"
dependencies = [
    "flask<3.2.0",
    "httpx<0.28.0",
    "langchain-community<0.4.0",
    "langchain-core<0.4.0",
    "langchain-openai<0.3.0",
    "langchain-text-splitters<0.4.0",
    "langgraph<0.3.0",
    "llama-index>=0.12.38",
    "matplotlib<3.11.0",
    "numpy<2",
    "openai<1.55.0",
    "openpyxl<3.2.0",
    "pandas>=2.2.3",
    "pydantic<2.10.0",
    "pypdf<6.8.0",
    "python-dotenv>=1.2.1",
    "tavily-python<0.6.0",
    "tiktoken<0.9.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ipykernel<7",
    "jupyter<=1.1.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ruff-lsp>=0.0.62",
]
